--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -93,3 +93,12 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: background-color 0.3s ease, border-color 0.3s ease;
 }
+
+path.domain{
+  opacity: 0.1;
+
+}
+
+.tick > line {
+  opacity: 0.1;
+}
